istio-feature-gating-demo/gatekeeper/constrainttemplates/sidecar-config/sidecar-hosts-and-traffic-policy.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  annotations:
    description: Enforce that there's a default sidecar CR to restrict the scope of egress traffic. 
  name: sidecarhostsandtrafficpolicy
spec:
  crd:
    spec:
      names:
        kind: SidecarHostsAndTrafficPolicy
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |-
      package istio.networking.sidecars

      spec = input.review.object.spec

      violation[{"msg": msg}] {
        is_sidecar(input.review.kind)
        host := spec.egress[_].hosts[_]
        host == "*"
        msg := sprintf("Cannot use broad host definition \"*\" in Sidecar egress configuration.")
      }

      violation[{"msg": msg}] {
        is_sidecar(input.review.kind)
        outboundTPMode := spec.outboundTrafficPolicy.mode
        outboundTPMode == "ALLOW_ANY"
        msg := sprintf("Outbound traffic policy mode can only be set to \"REGISTRY_ONLY\" in Sidecar configuration.")
      }

      is_sidecar(kind) {
          kind.kind == "Sidecar"
          kind.group == "networking.istio.io"
      }
